crates/formatter/tests/snapshots/snapshots__anki__search__note_due_order.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists sort_order;
create temporary table sort_order (
	pos integer primary key,
	nid integer not null unique
);
insert into sort_order (nid)
select nid
from cards
where (odid = 0 and type != 0 and queue > 0)
group by nid;
