crates/formatter/tests/snapshots/snapshots__anki__search__note_original_position_order.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists sort_order;
create temporary table sort_order (
	pos integer primary key,
	nid integer not null unique
);
insert into sort_order (nid)
select nid
from cards
group by nid
order by
	coalesce(
		extract_original_position(data),
		case when type == 0 then due else 0 end
	);
